--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,54 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+/* SRTUCTURE */
+.container{
+    width : 900px;
+    height: 100vh;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: black;
+}
+
+.carousel-container{
+    position: relative;
+    width: 700px;
+    height: 300px;
+    background-color: white;
+}
+
+.prev, .next{
+    width: 20px;
+    height: 20px;
+    margin: 10px 0;
+    border-radius: 50%;
+    background: #ccc;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+    cursor: pointer;
+    z-index: 100;
+    text-align: center;
+    line-height: 20px;
+}
+
+.next{
+    bottom: 0;
+}
+
+.item{
+    height: 100%;
+    display: none;
+}
+
+.active{
+    display: block;
+}
+.item img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
